# LiveCrop

./: .gitignore  CLAUDE.md  Colab.md  README.md  app.py  pyproject.toml  requirements.txt
agents/: baselines.py  evaluate.py  sweep.py  train.py
configs/: agents.yaml  env.yaml
irrigation_env/: __init__.py  dynamics.py  environment.py  weather.py
notebooks/: irrigation_rl.ipynb
results/raw/: eval_summary.json  train_a2c_seed42.json  train_dqn_seed42.json  train_ppo_seed42.json
tests/: test_env.py
